--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-/target
+# Rust/Cargo
+/target/
+**/*.rs.bk
+**/*.rs.old
+**/*.rlib
+Cargo.lock
+
+# Solana
+*.keypair.json
+*.so
+*.dmp
+
+# IDE / Editor
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Node / JS
+node_modules/
+dist/
+.env
